# moonshine_cpp_examples

./: CMakeLists.txt  LICENSE  README.md  moonshine_transcribe_wav.cpp
model/: README.md
model/tokenizer/: tok.json
